--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
-
+        classpath 'com.google.gms:google-services:3.1.0'
+        classpath 'me.tatarka:gradle-retrolambda:3.7.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,6 +18,7 @@ allprojects {
         jcenter()
         mavenCentral()
         mavenLocal()
+        maven { url "https://maven.google.com" }
     }
 }
 
