--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,7 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-databind:2.8.10'
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'org.greenrobot:eventbus:3.1.1'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     testCompile 'junit:junit:4.12'
 }
