--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
 
         <activity android:name=".ChatsActivity" />
         <activity android:name=".ContactsActivity" />
+        <activity android:name=".MessagesActivity" />
 
     </application>
 
