--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,7 @@
         </activity>
         <activity android:name=".ChatsActivity" />
         <activity android:name=".ContactsActivity" />
-        <activity
-            android:name=".ChattingActivity"
-            android:label="@string/title_activity_chatting"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".ChattingActivity" />
     </application>
 
 </manifest>
